--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 </head>
 <body>
   <header>
-    <h1>For Democracy. For Everyone.</h1>
     <h2>Sangsoo Jun – Candidate for Secretary General, Inter-Parliamentary Union (IPU)</h2>
-    <p><em>“Connecting Parliaments through Innovation”</em></p>
+    <h3>For Democracy. For Everyone.</h1>
+    <h2>“Connecting Parliaments through Innovation”</h2>
   </header>
 
   <section>
